# money

./: Cargo.toml  expenses.csv  expenses.md  readme.md  rustfmt.toml
migrations/: 20250803194208_init_schema.sql
src/: db.rs  main.rs  models.rs  routes.rs
src/handlers/: expense.rs  user.rs
src/utils/: pretty.rs
tests/: expense_crud.rs  integration_expenses.rs  integration_test_expenses.rs  integration_test_user.rs  integration_user.rs
