[package]
name = "money"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
csv = "1.3.1"
actix-multipart = "0.7.2"
futures-util = "0.3.31"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-rt = "2"
serde_json = "1"


